# devsearch

./: .gitignore  README.md  db.sqlite3  pyproject.toml  requirements.txt
api/: serializers.py  urls.py  views.py
devsearch/: .env  settings.py  urls.py
frontend/: login.html  login.js  main.css  main.html  main.js
projects/: forms.py  models.py  signals.py  urls.py  utils.py  views.py
projects/migrations/: 0001_initial.py  0002_tags_and_reviews.py  0003_connect_tags.py  0004_fix_tags_in_project.py  0005_project_image.py  0006_alter_project_image.py  0007_project_owner.py  0008_alter_project_options_review_owner_and_more.py  0009_alter_project_options.py  0010_alter_project_owner.py
projects/templates/projects/: delete_template.html  project-form.html  project.html  project_form.html  projects.html
static/js/: main.js  project_form.js
static/styles/: app.css
templates/: delete_template.html  index.html  main.html  navbar.html  pagination.html
users/: forms.py  models.py  signals.py  urls.py  utils.py  views.py
users/migrations/: 0001_initial.py  0002_alter_profile_owner.py  0003_rename_owner_profile_user.py  0004_alter_profile_profile_image.py  0005_skill.py  0006_remove_profile_profile_image_profile_image_and_more.py  0007_message.py  0008_alter_profile_email.py  0009_alter_profile_options.py  0010_alter_profile_email_alter_profile_name_and_more.py
users/templates/users/: account.html  account_form.html  edit_account.html  inbox.html  login.html  login_form.html  login_register_form.html  message.html  message_form.html  profile.html  profiles.html  register.html  reset.html  reset_password.html  reset_password_complete.html  (+2 more)
