[tool.poetry]
name = "devsearch"
version = "0.1.0"
description = ""
authors = ["Alinocco <alinoco.dia@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.0.5"
Pillow = "^9.1.1"
whitenoise = "^6.2.0"
django-cleanup = "^6.0.0"
djangorestframework = "^3.13.1"
djangorestframework-simplejwt = "^5.2.0"
django-cors-headers = "^3.13.0"
psycopg2-binary = "^2.9.3"
django-environ = "^0.9.0"
psycopg2 = "^2.9.3"
gunicorn = "^20.1.0"
django-heroku = "^0.3.1"
drf-yasg = "^1.21.3"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
